test/expected/unicode_error_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "юникод"]
  [CompoundListCondition, None]
    [SimpleCommand "does_not_exist*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "юникод"
]
[Word
  Unquoted "does_not_exist*"
]
юникод
shit: 2:14: error: No matches for the glob pattern 'does_not_exist*'.
     2 |  echo юникод; does_not_exist*
       |               ^~~~~~~~~~~~~~~ here.
